--- a/splashnic_workspace/splashnic_sandbox/splashnic_sandbox.ioc
+++ b/splashnic_workspace/splashnic_sandbox/splashnic_sandbox.ioc
@@ -1,15 +1,35 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=TIM1_CH1
+Dma.RequestsNb=1
+Dma.TIM1_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM1_CH1.0.EventEnable=DISABLE
+Dma.TIM1_CH1.0.Instance=DMA1_Channel1
+Dma.TIM1_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH1.0.Mode=DMA_NORMAL
+Dma.TIM1_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.TIM1_CH1.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH1.0.RequestNumber=1
+Dma.TIM1_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.TIM1_CH1.0.SignalID=NONE
+Dma.TIM1_CH1.0.SyncEnable=DISABLE
+Dma.TIM1_CH1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.TIM1_CH1.0.SyncRequestNumber=1
+Dma.TIM1_CH1.0.SyncSignalID=NONE
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32G431KBT6
 Mcu.Family=STM32G4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP4=USART2
-Mcu.IP5=USB
-Mcu.IPNb=6
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM1
+Mcu.IP5=USART2
+Mcu.IP6=USB
+Mcu.IPNb=7
 Mcu.Name=STM32G431K(6-8-B)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA2
@@ -30,6 +50,7 @@ Mcu.UserName=STM32G431KBTx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -69,6 +90,44 @@ PB8-BOOT0.GPIOParameters=GPIO_Label
 PB8-BOOT0.GPIO_Label=LD2 [green]
 PB8-BOOT0.Locked=true
 PB8-BOOT0.Signal=GPIO_Output
+PCC.Checker=true
+PCC.Line=STM32G4x1
+PCC.MCU=STM32G431K(6-8-B)Tx
+PCC.PartNumber=STM32G431KBTx
+PCC.Seq0=2
+PCC.Seq0.Step0.Average_Current=26 mA
+PCC.Seq0.Step0.CPU_Frequency=170 MHz
+PCC.Seq0.Step0.Category=In DS Table
+PCC.Seq0.Step0.DMIPS=213.0
+PCC.Seq0.Step0.Duration=0.1 ms
+PCC.Seq0.Step0.Frequency=4 MHz
+PCC.Seq0.Step0.Memory=FLASH/ART
+PCC.Seq0.Step0.Mode=RUN
+PCC.Seq0.Step0.Oscillator=HSE BYP PLL
+PCC.Seq0.Step0.Peripherals=
+PCC.Seq0.Step0.TaMax=122.89
+PCC.Seq0.Step0.User's_Consumption=0 mA
+PCC.Seq0.Step0.Vcore=Range1-Boost
+PCC.Seq0.Step0.Vdd=3.6
+PCC.Seq0.Step0.Voltage_Source=Battery
+PCC.Seq0.Step1.Average_Current=59.5 \u00B5A
+PCC.Seq0.Step1.CPU_Frequency=0 Hz
+PCC.Seq0.Step1.Category=In DS Table
+PCC.Seq0.Step1.DMIPS=0.0
+PCC.Seq0.Step1.Duration=0.9 ms
+PCC.Seq0.Step1.Frequency=0 Hz
+PCC.Seq0.Step1.Memory=NA
+PCC.Seq0.Step1.Mode=STOP1
+PCC.Seq0.Step1.Oscillator=ALL CLOCKS OFF
+PCC.Seq0.Step1.Peripherals=
+PCC.Seq0.Step1.TaMax=129.98
+PCC.Seq0.Step1.User's_Consumption=0 mA
+PCC.Seq0.Step1.Vcore=NoRange
+PCC.Seq0.Step1.Vdd=3.6
+PCC.Seq0.Step1.Voltage_Source=Battery
+PCC.Series=STM32G4
+PCC.Temperature=25
+PCC.Vdd=3.6
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -97,7 +156,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
@@ -149,7 +208,7 @@ TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 CH1,PeriodNoDither,PulseNoDither_1,OCFastMode_PWM-PWM Generation1 CH1,OCIdleState_1
 TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
 TIM1.OCIdleState_1=TIM_OCIDLESTATE_SET
-TIM1.PeriodNoDither=230
+TIM1.PeriodNoDither=213
 TIM1.PulseNoDither_1=70
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
