--- a/splashnic_workspace/splashnic_sandbox/splashnic_sandbox.ioc
+++ b/splashnic_workspace/splashnic_sandbox/splashnic_sandbox.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=TIM1_CH1
-Dma.RequestsNb=1
+Dma.Request1=USART1_RX
+Dma.RequestsNb=2
 Dma.TIM1_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM1_CH1.0.EventEnable=DISABLE
 Dma.TIM1_CH1.0.Instance=DMA1_Channel1
@@ -18,6 +19,23 @@ Dma.TIM1_CH1.0.SyncEnable=DISABLE
 Dma.TIM1_CH1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.TIM1_CH1.0.SyncRequestNumber=1
 Dma.TIM1_CH1.0.SyncSignalID=NONE
+Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.1.EventEnable=DISABLE
+Dma.USART1_RX.1.Instance=DMA1_Channel2
+Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.1.Mode=DMA_NORMAL
+Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.1.RequestNumber=1
+Dma.USART1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_RX.1.SignalID=NONE
+Dma.USART1_RX.1.SyncEnable=DISABLE
+Dma.USART1_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_RX.1.SyncRequestNumber=1
+Dma.USART1_RX.1.SyncSignalID=NONE
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32G431KBT6
@@ -27,23 +45,26 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
-Mcu.IP5=USART2
-Mcu.IP6=USB
-Mcu.IPNb=7
+Mcu.IP5=USART1
+Mcu.IP6=USART2
+Mcu.IP7=USB
+Mcu.IPNb=8
 Mcu.Name=STM32G431K(6-8-B)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_SYS_VS_DBSignals
+Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PA8
-Mcu.Pin3=PA11
-Mcu.Pin4=PA12
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=PB8-BOOT0
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_SYS_VS_DBSignals
-Mcu.PinsNb=11
+Mcu.Pin3=PA9
+Mcu.Pin4=PA11
+Mcu.Pin5=PA12
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=PB7
+Mcu.Pin9=PB8-BOOT0
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431KBTx
@@ -51,6 +72,7 @@ MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -60,6 +82,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA11.Mode=Device
 PA11.Signal=USB_DM
@@ -86,48 +109,15 @@ PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA8.Signal=S_TIM1_CH1
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
+PB7.Locked=true
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PB8-BOOT0.GPIOParameters=GPIO_Label
 PB8-BOOT0.GPIO_Label=LD2 [green]
 PB8-BOOT0.Locked=true
 PB8-BOOT0.Signal=GPIO_Output
-PCC.Checker=true
-PCC.Line=STM32G4x1
-PCC.MCU=STM32G431K(6-8-B)Tx
-PCC.PartNumber=STM32G431KBTx
-PCC.Seq0=2
-PCC.Seq0.Step0.Average_Current=26 mA
-PCC.Seq0.Step0.CPU_Frequency=170 MHz
-PCC.Seq0.Step0.Category=In DS Table
-PCC.Seq0.Step0.DMIPS=213.0
-PCC.Seq0.Step0.Duration=0.1 ms
-PCC.Seq0.Step0.Frequency=4 MHz
-PCC.Seq0.Step0.Memory=FLASH/ART
-PCC.Seq0.Step0.Mode=RUN
-PCC.Seq0.Step0.Oscillator=HSE BYP PLL
-PCC.Seq0.Step0.Peripherals=
-PCC.Seq0.Step0.TaMax=122.89
-PCC.Seq0.Step0.User's_Consumption=0 mA
-PCC.Seq0.Step0.Vcore=Range1-Boost
-PCC.Seq0.Step0.Vdd=3.6
-PCC.Seq0.Step0.Voltage_Source=Battery
-PCC.Seq0.Step1.Average_Current=59.5 \u00B5A
-PCC.Seq0.Step1.CPU_Frequency=0 Hz
-PCC.Seq0.Step1.Category=In DS Table
-PCC.Seq0.Step1.DMIPS=0.0
-PCC.Seq0.Step1.Duration=0.9 ms
-PCC.Seq0.Step1.Frequency=0 Hz
-PCC.Seq0.Step1.Memory=NA
-PCC.Seq0.Step1.Mode=STOP1
-PCC.Seq0.Step1.Oscillator=ALL CLOCKS OFF
-PCC.Seq0.Step1.Peripherals=
-PCC.Seq0.Step1.TaMax=129.98
-PCC.Seq0.Step1.User's_Consumption=0 mA
-PCC.Seq0.Step1.Vcore=NoRange
-PCC.Seq0.Step1.Vdd=3.6
-PCC.Seq0.Step1.Voltage_Source=Battery
-PCC.Series=STM32G4
-PCC.Temperature=25
-PCC.Vdd=3.6
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -156,7 +146,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
@@ -210,6 +200,11 @@ TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
 TIM1.OCIdleState_1=TIM_OCIDLESTATE_SET
 TIM1.PeriodNoDither=213
 TIM1.PulseNoDither_1=70
+USART1.BaudRate=9600
+USART1.IPParameters=Mode,VirtualMode-Asynchronous,BaudRate,OverrunDisableParam
+USART1.Mode=MODE_TX_RX
+USART1.OverrunDisableParam=ADVFEATURE_OVERRUN_DISABLE
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
